-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.2.0
-
None
-
3
-
4700
in ll_page_mkwrite(), the page is wrongly invalidated w/o checking if it's dirty. This will cause data corruption if this page contains useful data. We should write it back before invalidating it. This is the wrong:
- Trackbacks
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....